fix: scroll bar UI
- Hidden scrollbar and cross browsing

--- a/src/styles/components/reservationCard/index.css
+++ b/src/styles/components/reservationCard/index.css
@@ -5,11 +5,12 @@
   height: 80%;
   overflow-y: scroll;
   overflow-x: hidden;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
 }
 
-::-webkit-scrollbar {
-  width: 0;
-  background: transparent;
+.cards-wrapper::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
 }
 
 .container {
